--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -1,5 +1,5 @@
 Name:                happstack-hsp
-Version:             7.3.3
+Version:             7.3.4
 Synopsis:            Support for using HSP templates in Happstack
 Description:         Happstack is a web application framework. HSP is an XML templating solution. This package makes it easy to use HSP templates with Happstack.
 Homepage:            http://www.happstack.com/
@@ -13,9 +13,8 @@ Build-type:          Simple
 Cabal-version:       >=1.6
 
 source-repository head
-    type:     darcs
-    subdir:   happstack-hsp
-    location: http://hub.darcs.net/stepcut/happstack
+    type:     git
+    location: https://github.com/Happstack/happstack-hsp.git
 
 Library
   Hs-source-dirs:      src
@@ -29,7 +28,7 @@ Library
 
   Build-depends:       base             >= 3.0 && < 5.0,
                        bytestring       >= 0.9 && < 0.11,
-                       happstack-server >= 6.0 && < 7.4,
+                       happstack-server >= 6.0 && < 7.5,
                        harp             >= 0.4 && < 0.5,
                        hsp              >= 0.9.2 && < 0.11,
                        hsx2hs           >= 0.13.0 && < 0.14,
