Allow utf8-string-1

--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -33,7 +33,7 @@ Library
                        hsp              >= 0.9.2 && < 0.11,
                        hsx2hs           >= 0.13.0 && < 0.14,
                        mtl              >= 1.1 && < 2.3,
-                       utf8-string      == 0.3.*,
+                       utf8-string      >= 0.3 && < 1.1,
                        syb              >= 0.3 && < 0.5,
                        text             >= 0.10 && < 1.3
 
