--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -7,7 +7,7 @@ License:             BSD3
 License-file:        LICENSE
 Author:              Jeremy Shaw
 Maintainer:          Happstack team <happs@googlegroups.com>
-Copyright:           2011 Jeremy Shaw
+Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
 Cabal-version:       >=1.6
@@ -21,8 +21,6 @@ Library
 
   Exposed-modules:     Happstack.Server.HSP.HTML
                        Happstack.Server.XMLGenT
---                       HSP.Identity
---                       HSP.IdentityT
                        HSP.ServerPartT
                        HSP.Google.Analytics
 
@@ -36,5 +34,3 @@ Library
                        utf8-string      >= 0.3 && < 1.1,
                        syb              >= 0.3 && < 0.5,
                        text             >= 0.10 && < 1.3
-
---  Build-tools:         hsx2hs
