.travis.yml - start testing against GHC 8.0.1

--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -11,6 +11,7 @@ Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
 Cabal-version:       >=1.6
+tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
 source-repository head
     type:     git
