--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -11,7 +11,7 @@ Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
 Cabal-version:       >=1.6
-tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
+tested-with:         GHC==8.0.1, GHC==8.2.2, GHC==8.4.1, GHC==8.6.5, GHC==8.8.1
 
 source-repository head
     type:     git
