--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -1,5 +1,5 @@
 Name:                happstack-hsp
-Version:             7.3.7.4
+Version:             7.3.7.5
 Synopsis:            Support for using HSP templates in Happstack
 Description:         Happstack is a web application framework. HSP is an XML templating solution. This package makes it easy to use HSP templates with Happstack.
 Homepage:            http://www.happstack.com/
@@ -10,14 +10,15 @@ Maintainer:          Happstack team <happs@googlegroups.com>
 Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
-Cabal-version:       >=1.6
-tested-with:         GHC==8.0.1, GHC==8.2.2, GHC==8.4.1, GHC==8.6.5, GHC==8.8.1
+Cabal-version:       >=1.10
+tested-with:         GHC==8.0.1, GHC==8.2.2, GHC==8.4.1, GHC==8.6.5, GHC==8.8.1, GHC==8.10.2
 
 source-repository head
     type:     git
     location: https://github.com/Happstack/happstack-hsp.git
 
 Library
+  Default-language:    Haskell2010
   Hs-source-dirs:      src
 
   Exposed-modules:     Happstack.Server.HSP.HTML
@@ -26,8 +27,8 @@ Library
                        HSP.Google.Analytics
 
   Build-depends:       base             >= 3.0 && < 5.0,
-                       bytestring       >= 0.9 && < 0.11,
-                       happstack-server >= 6.0 && < 7.7,
+                       bytestring       >= 0.9 && < 0.12,
+                       happstack-server >= 6.0 && < 7.8,
                        harp             >= 0.4 && < 0.5,
                        hsp              >= 0.9.2 && < 0.11,
                        hsx2hs           >= 0.13.0 && < 0.15,
