--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -1,5 +1,5 @@
 Name:                happstack-hsp
-Version:             7.3.7.5
+Version:             7.3.7.6
 Synopsis:            Support for using HSP templates in Happstack
 Description:         Happstack is a web application framework. HSP is an XML templating solution. This package makes it easy to use HSP templates with Happstack.
 Homepage:            http://www.happstack.com/
@@ -11,7 +11,7 @@ Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
 Cabal-version:       >=1.10
-tested-with:         GHC==8.0.1, GHC==8.2.2, GHC==8.4.1, GHC==8.6.5, GHC==8.8.1, GHC==8.10.2
+tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.2
 
 source-repository head
     type:     git
@@ -35,4 +35,4 @@ Library
                        mtl              >= 1.1 && < 2.3,
                        utf8-string      >= 0.3 && < 1.1,
                        syb              >= 0.3 && < 0.8,
-                       text             >= 0.10 && < 1.3
+                       text             >= 0.10 && < 2.1
