--- a/happstack-hsp.cabal
+++ b/happstack-hsp.cabal
@@ -1,5 +1,5 @@
 Name:                happstack-hsp
-Version:             7.3.7.6
+Version:             7.3.7.7
 Synopsis:            Support for using HSP templates in Happstack
 Description:         Happstack is a web application framework. HSP is an XML templating solution. This package makes it easy to use HSP templates with Happstack.
 Homepage:            http://www.happstack.com/
@@ -11,7 +11,7 @@ Copyright:           2011-2015 Jeremy Shaw
 Category:            Web, Happstack
 Build-type:          Simple
 Cabal-version:       >=1.10
-tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.2
+tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.5, GHC==9.4.3
 
 source-repository head
     type:     git
@@ -28,11 +28,11 @@ Library
 
   Build-depends:       base             >= 3.0 && < 5.0,
                        bytestring       >= 0.9 && < 0.12,
-                       happstack-server >= 6.0 && < 7.8,
+                       happstack-server >= 6.0 && < 7.9,
                        harp             >= 0.4 && < 0.5,
                        hsp              >= 0.9.2 && < 0.11,
                        hsx2hs           >= 0.13.0 && < 0.15,
-                       mtl              >= 1.1 && < 2.3,
+                       mtl              >= 1.1 && < 2.4,
                        utf8-string      >= 0.3 && < 1.1,
                        syb              >= 0.3 && < 0.8,
                        text             >= 0.10 && < 2.1
